Add comments explaining when each exception in the advice is thrown.